--- a/app/styles/pages/_receipts.scss
+++ b/app/styles/pages/_receipts.scss
@@ -9,7 +9,3 @@
     &.rec-amtProvided { width: 15%; }
     &.rec-view { width: 15%; }
 }
-
-.receipts-list .table-list-row {
-    height: 80px;
-}
